--- a/Src/TSPCsharp.csproj
+++ b/Src/TSPCsharp.csproj
@@ -54,10 +54,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ILOG.Concert">
-      <HintPath>..\..\..\..\..\..\..\Program Files\IBM\ILOG\CPLEX_Studio127\cplex\bin\x64_win64\ILOG.Concert.dll</HintPath>
+      <HintPath>C:\Program Files\IBM\ILOG\CPLEX_Studio127\cplex\bin\x64_win64\ILOG.Concert.dll</HintPath>
     </Reference>
     <Reference Include="ILOG.CPLEX">
-      <HintPath>..\..\..\..\..\..\..\Program Files\IBM\ILOG\CPLEX_Studio127\cplex\bin\x64_win64\ILOG.CPLEX.dll</HintPath>
+      <HintPath>C:\Program Files\IBM\ILOG\CPLEX_Studio127\cplex\bin\x64_win64\ILOG.CPLEX.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
